# MSW_Skywind_Team

./: .gitignore  Hero.cpp  Hero.h  JSON.h  Json.cpp  Json.h  Json_8h_source.html  Kalandor.cpp  Kalandor.h  Kalandor_8h_source.html  Makefile  Monster.cpp  Monster.h  README.md  Warrior.cpp  Warrior.h  Warrior_8h_source.html  a.out  annotated.html  autotoc_md0.html  classJson-members.html  classJson.html  classKalandor-members.html  classKalandor.html  classKalandor__coll__graph.md5  classKalandor__inherit__graph.map  classKalandor__inherit__graph.md5  classWarrior-members.html  classWarrior.html  classWarrior__inherit__graph.map  classWarrior__inherit__graph.md5  classes.html  doxconf  files.html  functions.html  functions_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_1.map  (+13 more)
.github/: FirstTest.yml  doxytest.yml
Docker/: Dockerfile.txt
html/: Hero_8h_source.html  JSON_8h_source.html  Monster_8h_source.html  annotated.html  autotoc_md0.html  classHero-members.html  classHero.html  classJSON-members.html  classJSON.html  classJSON_1_1ParseException-members.html  classJSON_1_1ParseException.html  classMonster-members.html  classMonster.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  index.html  inherits.html  md_README.html  (+2 more)
units/: Alduin.json  CMakeLists.txt  Maple.json  Sally.json  Sally.txt  googleTest.cpp  googleTests.cpp
units/scenarios/: scenario1_whitespaces.json  scenario2_changed_keys.json  scenario2_empty_rows_and_whitespaces.json
units/units/: Sally.json
(+66 files in other folders)
